Some style fixes

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   </header>
 
   <!-- MAIN -->
-  
+
   <main class="main">
 
     <div class="slider">
@@ -82,7 +82,7 @@
 
     <section class="container-fluid first-section_bckg" id="section1">
       <div class="content first-section-size">
-        <div class="row align-items-end no-gutters intro">
+        <div class="row align-items-end intro">
           <div class="col-md-10 col-xl-6">
             <h1 class="intro_title">БРЕНДИРОВАННЫЙ ШОКОЛАД РУЧНОЙ РАБОТЫ</h1>
             <h3 class="intro_subtitle">
@@ -90,56 +90,50 @@
               наборам
             </h3>
           </div>
-          <div class="col-md-12 col-xl-2">
-            <p class="intro_description">
+          <div class="col-md-12 col-xl-3 intro_description">
+            <p class="intro_description-text">
               Набор натурального <br />
               безглютенового шоколада
             </p>
             <p class="intro_description-price">от 890 рублей</p>
           </div>
         </div>
-        <div class="row align-items-center intro_form-row">
-          <div class="col-xs-12 col-md-9 col-xl-6">
-            <form>
-              <div class="d-flex flex-wrap form-row align-items-center intro_form">
-                <div class="col intro_form-input">
-                  <label class="intro_form-input_label" for="formInput">Введите ваш телефон</label>
-                  <input type="tel" class="phone__mask form-input form-control" id="formInput" placeholder="+7 (123) 456 78 91" />
-                </div>
-                <div class="col text-center">
-                  <button type="submit" class="btn intro_form-btn">
-                    получить предложение
-                  </button>
-                </div>
+        <div class="row ml-0 align-items-center intro_form-row">
+          <!-- <div class="col-xs-12 col-md-9 col-xl-6"> -->
+          <form>
+            <div class="d-flex flex-wrap align-items-center intro_form">
+              <div class="col intro_form-input">
+                <label class="intro_form-input_label" for="formInput">Введите ваш телефон</label>
+                <input type="tel" class="phone__mask form-input form-control" id="formInput"
+                  placeholder="+7 (123) 456 78 91" />
               </div>
-            </form>
-          </div>
+              <div class="col text-center">
+                <button type="submit" class="btn intro_form-btn">
+                  получить предложение
+                </button>
+              </div>
+            </div>
+          </form>
+          <!-- </div> -->
         </div>
-        <div class="row intro_list list-unstyled justify-content-between">
-          <div class="col-md-5 col-lg-7 col-xl-12">
-            <ul class="row justify-content-between list-unstyled">
-              <li class="intro_list-item">
-                <img class="mr-3" src="./img/soy.png" alt="">
-                <span class="intro_list-text">Без сои</span>
-              </li>
-              <li class="intro_list-item">
-                <img class="mr-3" src="./img/sugar.png" alt="">
-                <span class="intro_list-text">Без сахара</span>
-              </li>
-              <li class="intro_list-item">
-                <img class="mr-3" src="./img/lactose.png" alt="">
-                <span class="intro_list-text">Без лактозы</span>
-              </li>
-              <li class="intro_list-item">
-                <img class="mr-3" src="./img/fat.png" alt="">
-                <span class="intro_list-text">Без животного <br> жира</span>
-              </li>
-              <li class="intro_list-item">
-                <img class="mr-3" src="./img/conser.png" alt="">
-                <span class="intro_list-text">Без <br> консервантов</span>
-              </li>
-            </ul>
-          </div>
+        <div class="intro_list">
+          <ul class="d-flex flex-wrap justify-content-between list-unstyled">
+            <li class="intro_list-item" style="background-image: url(./img/soy.png);">
+              Без сои
+            </li>
+            <li class="intro_list-item" style="background-image: url(./img/sugar.png);">
+              Без сахара
+            </li>
+            <li class="intro_list-item" style="background-image: url(./img/lactose.png);">
+              Без лактозы
+            </li>
+            <li class="intro_list-item" style="background-image: url(./img/fat.png);">
+              Без животного жира
+            </li>
+            <li class="intro_list-item" style="background-image: url(./img/conser.png);">
+              Без консервантов
+            </li>
+          </ul>
         </div>
       </div>
     </section>
@@ -174,7 +168,8 @@
               </div>
               <div class="col-xl-6">
                 <p class="info_title m-0">Лояльность</p>
-                <p class="info_description mt-1">Шоколад воздействует на органы чувств, что позволяет вызвать эмоциональную
+                <p class="info_description mt-1">Шоколад воздействует на органы чувств, что позволяет вызвать
+                  эмоциональную
                   привязку к бренду</p>
               </div>
             </div>
@@ -186,7 +181,8 @@
           </div>
           <div class="col-xs-12 col-md-8 col-xl-3 mr-xl-5">
             <p class="info_title m-0">Шоколад любит более 95% людей</p>
-            <p class="info_description info_description_width mt-1">Всеобщая любовь к шоколаду станет лучшим инструментом положительного
+            <p class="info_description info_description_width mt-1">Всеобщая любовь к шоколаду станет лучшим
+              инструментом положительного
               общения с сотрудниками, клиентами и партнерами</p>
           </div>
         </div>
@@ -212,7 +208,7 @@
 
     <section class="container-fluid bckg_mask" id="section3">
 
-      <div class="third-section_bckg">        
+      <div class="third-section_bckg">
         <img src="./img/chips2.png" alt="" class="img-fluid third-section_bckg-3">
         <img src="./img/choco_chips.png" alt="" class="img-fluid third-section_bckg-2">
         <img src="./img/broken_choco.png" alt="" class="img-fluid third-section_bckg-1">
@@ -327,7 +323,8 @@
           <!-- ID сюда добавил, чтобы сайд-скролл работал на каждом элементе -->
           <div class="col third-section_form" id="section4">
             <h3 class="third-section_form_title">СОМНЕВАЕТЕСЬ? <br> ЛУЧШЕ ОДИН РАЗ ПОПРОБОВАТЬ</h3>
-            <p class="third-section_form_subtitle">Наш шоколад всегда свежий и вкусный. Оставьте свои контакты и мы БЕСПЛАТНО доставим его
+            <p class="third-section_form_subtitle">Наш шоколад всегда свежий и вкусный. Оставьте свои контакты и мы
+              БЕСПЛАТНО доставим его
               Вам на дегустацию!</p>
             <form>
               <div class="form-row align-items-center call_me">
@@ -348,7 +345,7 @@
         </div>
 
       </div>
-    </section >
+    </section>
   </main>
 
   <script src="./js/mobile_menu.js"></script>
